--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,19 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!-- Apache POI -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${apache.poi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${apache.poi.version}</version>
+        </dependency>
+
         <!-- Apache Commons NET -->
         <dependency>
             <groupId>commons-net</groupId>
@@ -496,6 +509,7 @@
         <swagger-maven-plugin.version>3.1.6</swagger-maven-plugin.version>
         <apache.httpclient.version>4.5.6</apache.httpclient.version>
         <postgresql.version>42.2.5</postgresql.version>
+        <apache.poi.version>3.17</apache.poi.version>
     </properties>
 
 </project>
