YTI-655 , bugfix, comment delete, stopping if children are there.

--- a/pom.xml
+++ b/pom.xml
@@ -409,7 +409,7 @@
                     <portPropertyFile>target/test-classes/test-port.properties</portPropertyFile>
                     <images>
                         <image>
-                            <name>yti-postgres:latest</name>
+                            <name>yti-postgres:dev</name>
                             <alias>${project.artifactId}_test_postgres</alias>
                             <run>
                                 <namingStrategy>alias</namingStrategy>
