--- a/pom.xml
+++ b/pom.xml
@@ -371,6 +371,7 @@
                         <replacement>
                             <token>https://petstore.swagger.io/v2/swagger.json"</token>
                             <value>/comments-api/api/openapi.yaml",
+                                docExpansion: 'none',
                                 validatorUrl: null
                             </value>
                         </replacement>
