--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.4.RELEASE</version>
+        <version>2.5.2</version>
         <relativePath/>
     </parent>
 
@@ -30,13 +30,13 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.RELEASE</version>
+                <version>2020.0.3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+	
     <dependencies>
 
         <!-- YTI Spring Security -->
@@ -109,27 +109,27 @@
         <dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
-            <version>3.6</version>
+            <version>3.8.0</version>
         </dependency>
 
         <!-- Apache Commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <version>2.11.0</version>
         </dependency>
 
         <!-- Logging -->
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>5.0</version>
+            <version>6.6</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-core</artifactId>
-            <version>3.2.4</version>
+            <version>3.4.4</version>
         </dependency>
 
         <dependency>
@@ -182,7 +182,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>28.1-jre</version>
+            <version>30.1.1-jre</version>
         </dependency>
 
         <!-- Swagger -->
@@ -228,9 +228,18 @@
 
             <!-- Git commit Id Maven plugin -->
             <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <version>2.2.2</version>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
+                <version>5.0.0</version>
+                <executions>
+                    <execution>
+                        <id>git-info</id>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                        <phase>initialize</phase>
+                    </execution>
+                </executions>
                 <configuration>
                     <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                     <dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
@@ -273,7 +282,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.8.1</version>
                 <inherited>true</inherited>
                 <configuration>
                     <source>${java.version}</source>
@@ -309,7 +318,7 @@
             <plugin>
                 <groupId>com.googlecode.maven-download-plugin</groupId>
                 <artifactId>download-maven-plugin</artifactId>
-                <version>1.4.0</version>
+                <version>1.6.6</version>
                 <executions>
                     <execution>
                         <id>swagger-ui</id>
@@ -329,7 +338,7 @@
             <!-- Swagger UI resource copying -->
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>copy-swagger-resources</id>
@@ -383,8 +392,9 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.26.1</version>
+                <version>0.36.1</version>
                 <configuration>
+                    <skip>${skipTests}</skip>
                     <portPropertyFile>target/test-classes/test-port.properties</portPropertyFile>
                     <images>
                         <image>
@@ -392,6 +402,9 @@
                             <alias>${project.artifactId}_test_postgres</alias>
                             <run>
                                 <namingStrategy>alias</namingStrategy>
+                                <env>
+                                    <POSTGRES_HOST_AUTH_METHOD>trust</POSTGRES_HOST_AUTH_METHOD>
+                                </env>
                                 <log>
                                     <enabled>true</enabled>
                                     <color>green</color>
@@ -454,15 +467,15 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5</version>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.2.2</version>
                 <executions>
                     <execution>
                         <id>failing-on-high</id>
                         <phase>verify</phase>
                         <goals>
-                            <goal>findbugs</goal>
+                            <goal>spotbugs</goal>
                         </goals>
                         <configuration>
                             <failOnError>true</failOnError>
@@ -474,17 +487,17 @@
     </build>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <git.properties>git.properties</git.properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spotify-docker.version>1.1.1</spotify-docker.version>
+        <spotify-docker.version>1.2.2</spotify-docker.version>
         <dockerfile-maven-version>1.4.4</dockerfile-maven-version>
-        <swagger.version>2.0.9</swagger.version>
+        <swagger.version>2.1.10</swagger.version>
         <swagger-ui.version>3.23.11</swagger-ui.version>
-        <apache.httpclient.version>4.5.10</apache.httpclient.version>
+        <apache.httpclient.version>4.5.13</apache.httpclient.version>
         <postgresql.version>42.2.8</postgresql.version>
-        <apache.poi.version>4.1.0</apache.poi.version>
+        <apache.poi.version>5.0.0</apache.poi.version>
     </properties>
 
 </project>
